# kea-soft-si-2023-spring

./: .gitignore
00_misc/: stripeIframe.html
01_modules/html_no_module/: myModule.js
01_modules/python/: main.py
01_modules/python/my_module/: file_one.py
03_python_environments/myenv/: pyvenv.cfg
03_python_environments/myenv/Scripts/: activate  activate.bat
03_python_environments/testpoetry2/: pyproject.toml
04_basic_servers/: main.py  pyproject.toml
05._date/: index.js
05._date/python/: main.py
06._server_to_server/node/: app.js  package.json
06._server_to_server/python/: pyproject.toml
07._dotenv/node/: package.json
07._dotenv/python/: main.py  pyproject.toml
12._server_sent_event/node/: app.js  package.json
12._server_sent_event/node/public/: index.html
12._server_sent_event/python/: main.py  pyproject.toml
13._github_webhooks/: pyproject.toml  ruby.rb
13._github_webhooks/node/: app.js  package.json
13._github_webhooks/python/: main.py  pyproject.toml
15._websockets/node/: client.js  index.html  server.js
15._websockets/pyhon/: pyproject.toml
16._unknown/: index.html
16._unknown/node/: app.js  package-lock.json  package.json
16._unknown/python/: main.py  pyproject.toml
initialTask/: package.json
initialTask/python/: pyproject.toml
initialTask/python/files/: me.csv  me.xml  me.yaml
initialTask/python/routes/: routes.py
