[tool.poetry]
name = "04-basic-servers"
version = "0.1.0"
description = ""
authors = ["AndreasB2B <99027014+AndreasB2B@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "04_basic_servers"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
