[tool.poetry]
name = "testpoetry2"
version = "0.1.0"
description = ""
authors = ["AndreasB2B <99027014+AndreasB2B@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
