[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["AndreasB2B <99027014+AndreasB2B@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
